Integrando scanner con parser

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,18 +29,13 @@ dist.jar=${dist.dir}/AnalizadorLexico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.java-cup-11a.jar=lib\\jflex-1.6.1\\jflex-1.6.1\\lib\\java-cup-11a.jar
-file.reference.java-cup-11a.jar-1=C:\\Users\\Spartan\\Documents\\NetBeansProjects\\Taller1Compiladores_FernandoArrigorriaga_ArnoldoMoreno\\AnalizadorLexico\\lib\\jflex-1.6.1\\jflex-1.6.1\\lib\\java-cup-11a.jar
-file.reference.jflex-1.6.1.jar=lib\\jflex-1.6.1\\jflex-1.6.1\\lib\\jflex-1.6.1.jar
-file.reference.jflex-1.6.1.jar-1=C:\\Users\\Spartan\\Documents\\NetBeansProjects\\Taller1Compiladores_FernandoArrigorriaga_ArnoldoMoreno\\AnalizadorLexico\\lib\\jflex-1.6.1\\jflex-1.6.1\\lib\\jflex-1.6.1.jar
+file.reference.java-cup-11a.jar=lib/jflex-1.6.1/lib/java-cup-11a.jar
+file.reference.jflex-1.6.1.jar=lib/jflex-1.6.1/lib/jflex-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JFLEX.classpath}:\
     ${file.reference.java-cup-11a.jar}:\
-    ${file.reference.jflex-1.6.1.jar}:\
-    ${file.reference.jflex-1.6.1.jar-1}:\
-    ${file.reference.java-cup-11a.jar-1}
+    ${file.reference.jflex-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=analizadorlexico.AnalizadorLexico
+main.class=Presentacion.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
